# OnTaskManager

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ontask.db  vcpkg.json
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/app/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
src/storage/: ActivityRepository.cpp  ActivityRepository.h  CMakeLists.txt  CategoryRepository.cpp  CategoryRepository.h  Database.cpp  Database.h  SampleRepository.cpp  SampleRepository.h
src/tracker/: ActivityProvider.h  CMakeLists.txt  ForegroundTracker.cpp  ForegroundTracker.h  IdleDetector.cpp  IdleDetector.h
src/tracker/providers/: ChromeProvider.cpp  ChromeProvider.h  GenericProvider.cpp  GenericProvider.h  VisualStudioProvider.cpp  VisualStudioProvider.h
src/ui/: AssignCategoryDialog.cpp  AssignCategoryDialog.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  TimelineBarDelegate.cpp  TimelineBarDelegate.h  TimelineTreeModel.cpp  TimelineTreeModel.h  TrayIcon.cpp  TrayIcon.h
tests/: CMakeLists.txt  test_providers.cpp  test_storage.cpp  test_tracker.cpp
